# lualint

./: .gitignore  Cargo.toml  README.md
.github/workflows/: releaser.yml  rust.yml
docs/: README.zh-CN.md
scripts/: _all_rules.jsonc  all_rules.debug.sh  all_rules.jsonc  lint_dir.sh  lint_single.sh
src/: lib.rs  main.rs  trailing.rs  trivial.rs
src/cli/: gen.sh  mod.rs  tests.rs
src/lint/: lint_visitor.rs  linter_builder.rs  mod.rs
src/rules/: basic_indent.rs.disabled  eof_blank_line.rs  func_separation.rs  max_column_width.rs  mod.rs  no_goto_statement.rs  no_trailing_semicolon.rs  no_trailing_space.rs  one_line_before_else.rs  operator_spacing.rs  table_ctor_comma.rs
tests/: funcs.lua  max_column_width.lua  no_trailing_semicolon.lua  no_trailing_space.lua  one_line_before_else.lua  operator_spacing.lua  table_ctor_comma.lua  table_ctor_comma_tmp.lua
tests/comp/: longline.lua
