[package]
name = "lualint"
version = "0.1.0"
edition = "2021"
authors = ["Pluveto <pluvet@foxmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
downcast-rs = "1.2.0"
env_logger = "0.10.0"
full_moon = { version = "0.17.0", features = ["lua52"]}
generational-arena = "0.2.8"
lazy_static = "1.4.0"
log = "0.4.17"
once_cell = "1.17.1"
serde_json = "1.0.93"
yansi = "0.5.1"
